<resources>
    <string name="app_name">MD15</string>
    <string name="add">add</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="get">get</string>
    <string name="set">set</string>
    <string name="view">view</string>
    <string name="copy">copy</string>
    <string name="paste">paste</string>
    <string name="exit">exit</string>
    <string name="misc">разное</string>
    <string name="extmenu">расширенное меню</string>
</resources>