<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_add"
        android:orderInCategory="1"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="2"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="3"
        android:title="@string/delete">
    </item>
    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/menu_get"
            android:orderInCategory="4"
            android:title="@string/get">
        </item>
        <item
            android:id="@+id/menu_set"
            android:orderInCategory="5"
            android:title="@string/set">
        </item>
        <item
            android:id="@+id/menu_view"
            android:orderInCategory="6"
            android:title="@string/view">
        </item>
    </group>
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/menu_copy"
            android:orderInCategory="7"
            android:title="@string/copy">
        </item>
        <item
            android:id="@+id/menu_paste"
            android:orderInCategory="8"
            android:title="@string/paste">
        </item>
        <item
            android:id="@+id/menu_exit"
            android:orderInCategory="9"
            android:title="@string/exit">
        </item>
    </group>
</menu>
